syntax = "proto3";
option go_package = "/gen";

import "member.proto";

service YadosService {
  rpc AddNewMemberInCluster(NewMemberRequest) returns (NewMemberReply) {}
  rpc GetListOfPeers(ListOfPeersRequest) returns (ListOfPeersReply) {}
}
